@@ -146,12 +146,15 @@ EMUL_SSI (ges) { return (strcmp (op1, op2) >= 0); }
 
 EMUL_SIS (muls)
 {
-  char *res = xmalloc (strlen (op1) * op2 + 1);
+  char *res = malloc (strlen (op1) * op2 + 1);
   size_t i;
 
-  *res = '\0';
-  for (i = 0; i < op2; ++i)
-    strcat (res, op1);
+  if (res)
+    {
+      *res = '\0';
+      for (i = 0; i < op2; ++i)
+        strcat (res, op1);
+    }
 
   return res;
 }
@@ -468,6 +471,11 @@ EMUL_UU (bnoto) { return ~op; }
                                                                         \
           result = emul_##OP (PKL_AST_STRING_POINTER (string_op),       \
                               PKL_AST_INTEGER_VALUE (int_op));          \
+          if (!result)                                                  \
+            {                                                           \
+              PKL_ICE (PKL_AST_NOLOC, "out of memory");                 \
+              PKL_PASS_ERROR;                                           \
+            }                                                           \
                                                                         \
           new = pkl_ast_make_string (PKL_PASS_AST, result);             \
           PKL_AST_TYPE (new) = ASTREF (type);                           \
@@ -675,7 +683,10 @@ EMUL_UU (bnoto) { return ~op; }
           res = pk_str_concat (PKL_AST_STRING_POINTER (op1),            \
                                PKL_AST_STRING_POINTER (op2), NULL);     \
           if (!res)                                                     \
-            PKL_ICE (PKL_AST_LOC (op1), _("out of memory"));            \
+            {                                                           \
+              PKL_ICE (PKL_AST_LOC (op1), _("out of memory"));          \
+              PKL_PASS_ERROR;                                           \
+            }                                                           \
                                                                         \
           new = pkl_ast_make_string (PKL_PASS_AST, res);                \
           free (res);                                                   \
